# syslira-tools

./: .env  README.md  __init__.py  const.py  download_fulltext_from_collection.py  pyproject.toml  setup.py
clients/: __init__.py  paper_library.py
helpers/: __init__.py  conversion.py
src/clients/: openalex_client.py  paper_library.py  zotero_client.py
src/helpers/: pdf_util.py  sys_utils.py  vector_store.py
syslira_tools/: __init__.py
syslira_tools/clients/: const.py  paper_library.py  scopus_client.py  zotero_client.py
syslira_tools/helpers/: conversion.py  obj_util.py
tests/: example_papers.json  test.py
