[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syslira-tools"
version = "0.1.9"
authors = [
  { name="Richard Reider", email="richard.reider@ovgu.de" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
        'pyalex',
        'pyzotero',
        'pybliometrics',
        'loguru',
        'pandas'
]